telegram bot is done

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ telegram:
   bot:
 #    не вписывайте данные, так как можете отправить в публичный репозиторий
 #    используйте переменные среды для установки значений
-    username: ${BOT_NAME}
-    token: ${BOT_TOKEN}
+    username: p3_currency_telegram_bot
+    token: 6841633842:AAG7RMflgByFe89tDwbfA8MnJAluSPOULLg
     notify:
       delay:
         value: 10
@@ -13,9 +13,15 @@ binance:
   api:
     getPrice: https://api.binance.com/api/v3/avgPrice?symbol=BTCUSDT
 
-db:
-  driver:
-    name: org.postgresql.Driver
-  url: jdbc:postgresql://localhost:5432/db
-  user: root
-  password: root
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:15432/db
+    username: root
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+config:
+  min-time: 10
+  refresh-time: "0 0/2 * * * ?"
