--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.5'
+	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id "io.freefair.lombok" version "8.4"
 	id "org.hibernate.orm" version "6.3.1.Final"
@@ -14,7 +14,7 @@ ext {
 	springOrmVersion = '6.0.13'
 }
 
-group = 'com.example'
+group = 'com.skillbox'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -29,6 +29,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation "org.telegram:telegrambots:$telegrambotsVersion"
 	implementation "org.telegram:telegrambotsextensions:$telegrambotsVersion"
